# actuatex

./: .gitattributes  .gitignore  LICENSE  README.md  README_en.md  THIRD_PARTY.md
.github/workflows/: repository-checks.yml
backends/isaac_gym/: README.md  upstream.json
docs/: ARCHITECTURE.md  CODE_CHANGES_REPORT.zh-CN.md  INDUSTRIAL_RL_STACK.zh-CN.md  INVERTED_PENDULUM_BENCHMARK.zh-CN.md  INVERTED_PENDULUM_CONTROL_METHODS.zh-CN.md  ISAAC_SIM_6_MIGRATION.zh-CN.md  ROBOMASTER_ROADMAP.zh-CN.md  ROBOMASTER_SENTINEL_PHASE1.zh-CN.md  WHEEL_LEGGED_RL.zh-CN.md  WHEEL_LEGGED_SIM2SIM.zh-CN.md
navigation/ros2/actuatex_navigation/: package.xml  setup.cfg  setup.py
navigation/ros2/actuatex_navigation/actuatex_navigation/: __init__.py  camera_profile.py  cmd_vel_adapter.py  command_filter.py  mid360_pattern.py  mid360_pointcloud.py  mid360_ros.py
navigation/ros2/actuatex_navigation/actuatex_navigation/data/: NOTICE.md
navigation/ros2/actuatex_navigation/config/: front_camera_info.example.yaml  nav2_params.yaml
navigation/ros2/actuatex_navigation/launch/: navigation.launch.py
navigation/ros2/actuatex_navigation/maps/: tinymal_nav_arena.yaml
navigation/ros2/actuatex_navigation/test/: test_camera_profile.py  test_command_filter.py  test_mid360_pattern.py  test_mid360_pointcloud.py
scripts/: build_code_report_pdf.py  build_sentinel_gain_schedule.py  design_sentinel_hinf.py  design_sentinel_lqr.py  fetch_mid360_cad.sh  generate_inverted_pendulum_assets.py  install_isaac_gym_overlay.py  install_isaac_lab_compat.py  verify_repo.py
tasks/: __init__.py
(+181 files in other folders)
